--- a/components/ContactTimeline/src/_ContactTimelineMetaSeparator.scss
+++ b/components/ContactTimeline/src/_ContactTimelineMetaSeparator.scss
@@ -1,6 +1,7 @@
 .denhaag-contact-timeline__meta-separator {
   width: var(--denhaag-contact-timeline-step-meta-marker-size);
   height: var(--denhaag-contact-timeline-step-meta-marker-size);
+  min-inline-size: (--denhaag-contact-timeline-step-meta-marker-size);
   background-color: var(--denhaag-contact-timeline-step-meta-marker-color);
   border-radius: 50%;
 }
